tests/paczka1/fuzzy1/14096218.err
Error in line 12: D16swK S843 72,2
Error in line 19: WcKUGKI9 A817 45,9
Error in line 23: A304 A817 13,9
